--- a/react-tasks/src/App.css
+++ b/react-tasks/src/App.css
@@ -1,38 +1,54 @@
-.App {
+#calcWrapper {
+  top: 5%;
+  left: 35%;
+  width: 30%;
+  height: 90vh;
+  position: absolute;
+  padding: 4px;
+}
+h2 {
+  margin: auto;
+  width: 100%;
   text-align: center;
+  padding-bottom: 5px;
+  color: #2c3a47;
+}
+input {
+  width: 98%;
+  height: 2.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#btnWrapper {
+  width: auto;
+  padding-top: 10px;
+  height: 415.15px;
+  display: grid;
+  column-gap: 9%;
+  grid-template-columns: repeat(4, 18%);
+  grid-template-rows: 15%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
   color: white;
+  font-size: 32px;
+  background-color: #2c3a47;
+}
+button:hover {
+  background-color: #43515e;
+}
+#res {
+  width: 98%;
+  height: 1.5rem;
+  text-rendering: auto;
+  display: inline-block;
+  text-align: start;
+  font: 400 13.3333px Arial;
+  padding: 0px 2px;
+  padding-top: 1rem;
+  border-width: 0.5px;
+  border-style: solid;
+  border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  border-bottom: 2px solid black;
 }
