--- a/Project/leader-boards/src/App.css
+++ b/Project/leader-boards/src/App.css
@@ -86,12 +86,36 @@
 	padding: 0.5rem;
 }
 
-.card-button{
+.app-header {
+	padding: 0.5rem;
+	display: flex;
+}
+.heading {
+	height: fit-content;
+	font-size: 2rem;
+	font-weight: bold;
+	display: inline;
+	margin-right: auto;
+}
+
+.navbar ul {
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	margin: 0px;
+}
+
+.navbar ul li {
+	list-style-type: none;
+	margin: 0.5rem;
+	font-size: 1.2rem;
+}
+a {
+	text-decoration: none;
 	background-color: #0378f5;
 	border-radius: 8px;
 	border-style: none;
 	border: none;
 	padding: 5px 20px;
 	color: white;
-	/* font-size: 1rem; */
 }
