--- a/Project/leader-boards/src/App.css
+++ b/Project/leader-boards/src/App.css
@@ -119,3 +119,13 @@ a {
 	padding: 5px 20px;
 	color: white;
 }
+
+.login-btn, .logout-btn{
+	text-decoration: none;
+	background-color: #0378f5;
+	border-radius: 8px;
+	border-style: none;
+	border: none;
+	padding: 5px 20px;
+	color: white;
+}
