--- a/Project/leader-boards/src/App.css
+++ b/Project/leader-boards/src/App.css
@@ -112,7 +112,7 @@
 }
 a {
 	text-decoration: none;
-	background-color: #0378f5;
+	background-color: #543d56;
 	border-radius: 8px;
 	border-style: none;
 	border: none;
@@ -120,12 +120,81 @@ a {
 	color: white;
 }
 
-.login-btn, .logout-btn{
+.login-btn,
+.logout-btn {
 	text-decoration: none;
-	background-color: #0378f5;
+	background-color: #543d56;
 	border-radius: 8px;
 	border-style: none;
 	border: none;
 	padding: 5px 20px;
 	color: white;
+}
+
+.create-quiz-container {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+	max-width: 768px;
+}
+.create-quiz {
+	display: flex;
+	flex-direction: column;
+	background-color: #89817e;
+	padding: 0.5rem;
+}
+
+.create-quiz input {
+	border: none;
+	margin: 0.5rem, 0rem;
+}
+
+.create-quiz > input {
+	border: 0.5px solid black;
+	font-size: larger;
+	background-color: lightgray;
+}
+
+.ch-container {
+	display: flex;
+	flex-direction: column;
+	margin-top: 0.5rem;
+}
+.ch-container input {
+	margin: 0.5rem 0.5rem;
+	background-color: rgb(255, 255, 255, 0.5);
+	font-size: 1.25rem;
+	width: 90%;
+}
+
+.add-question-btn {
+	align-self: flex-start;
+	border-radius: 0.5rem;
+	background-color: #543d56;
+	color: white;
+	margin: 0.5rem 0rem;
+}
+.add-choice {
+	align-self: flex-start;
+	border-radius: 50px 50px;
+	margin: 0.2rem 0.5rem;
+}
+
+.add-quiz-btn {
+	width: 2rem;
+	height: 2rem;
+	border-radius: 1.5rem;
+	display: inline-block;
+	padding: 0.5rem;
+	font-size: 2rem;
+}
+
+.quiz-finish {
+	width: 20%;
+	align-self: flex-start;
+	border-radius: 0.5rem;
+	background-color: #543d56;
+	color: white;
+	margin: 0.5rem 0rem;
 }
