--- a/Project/leader-boards/src/App.css
+++ b/Project/leader-boards/src/App.css
@@ -1,4 +1,160 @@
-/* quiz section */
+/* universal */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	/* border: 1px solid black; */
+}
+
+a,
+button {
+	text-decoration: none;
+	background-color: #543d56;
+
+	width: fit-content;
+	height: fit-content;
+	padding: 0.5rem;
+	margin: 0.25rem;
+
+	border-radius: 0.5rem;
+	border-style: none;
+	border: none;
+
+	color: white;
+	font: inherit;
+	font-size: 1rem;
+}
+
+/* Header */
+.app-header {
+	width: 100vw;
+
+	/* border: 1px solid black; */
+	padding: 0.5rem;
+}
+
+/* header > Title */
+.webpage-title {
+	margin-right: auto;
+	font-size: 3rem;
+	font-weight: bolder;
+}
+
+/* header > navbar */
+nav {
+	/* border: 1px solid black; */
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-items: right;
+}
+
+nav button {
+	width: fit-content;
+	padding: 0.5rem;
+	text-decoration: none;
+	background-color: #543d56;
+	margin: 0.25rem;
+	order: 1;
+}
+
+nav > img {
+	width: 3rem;
+	height: 3rem;
+	border-radius: 1.5rem;
+	margin: 0.25rem;
+}
+
+/* header > profile popup */
+.profile-popup {
+	display: none;
+}
+
+.show-profile-popup {
+	width: 30%;
+	min-width: 300px;
+	position: fixed;
+	top: 4.5rem;
+	right: 1.5rem;
+	color: white;
+	background: rgb(245, 243, 243);
+	margin: 0px;
+	padding: 0px;
+	z-index: 999;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+
+	box-shadow: -5px 5px 4.5px rgb(0 0 0 / 50%);
+}
+
+.profile-popup p {
+	margin: 0.25rem;
+}
+.profile-content {
+	width: 100%;
+	height: 90%;
+	background-color: #543d56;
+}
+
+.logout-btn {
+	background-color: rgb(250, 83, 83);
+	align-self: flex-end;
+}
+
+/* dashboard */
+.dashboard {
+	width: 100vw;
+	padding: 0.5rem;
+	/* border: 1px solid black; */
+	overflow: hidden;
+}
+
+.quiz-cards {
+	width: 100%;
+}
+
+/* quizcard > rankings */
+.rankings-container {
+	display: none;
+}
+
+.show-rankings-container {
+	display: grid;
+	grid-template-columns: 1fr 3fr 2fr;
+	row-gap: 5px;
+	border: 1px solid black;
+	padding: 0.2rem;
+}
+
+.posH {
+	grid-column: 1 / 2;
+	background-color: aliceblue;
+	text-align: center;
+	border-top-left-radius: 0.25rem;
+	border-bottom-left-radius: 0.25rem;
+}
+
+.nameH {
+	grid-column: 2 / 3;
+	background-color: aliceblue;
+}
+
+.scoreH {
+	grid-column: 3 / 4;
+	background-color: aliceblue;
+	text-align: center;
+	border-top-right-radius: 0.25rem;
+	border-bottom-right-radius: 0.25rem;
+}
+
+.rankings-close {
+	color: red;
+	background-color: lightgray;
+	font-weight: 900;
+}
+
 .quiz {
 	width: 97vw;
 	margin: 2vw;
@@ -69,14 +225,6 @@
 }
 
 /* user dashboard */
-.user-dashboard {
-	width: 60%;
-	position: relative;
-	top: 10vh;
-	left: 20vw;
-	display: flex;
-	flex-direction: column;
-}
 
 .quiz-card {
 	width: 98%;
@@ -84,51 +232,6 @@
 	background-color: lightgray;
 	border-radius: 8px;
 	padding: 0.5rem;
-}
-
-.app-header {
-	padding: 0.5rem;
-	display: flex;
-}
-.heading {
-	height: fit-content;
-	font-size: 2rem;
-	font-weight: bold;
-	display: inline;
-	margin-right: auto;
-}
-
-.navbar ul {
-	display: inline-flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	margin: 0px;
-}
-
-.navbar ul li {
-	list-style-type: none;
-	margin: 0.5rem;
-	font-size: 1.2rem;
-}
-a {
-	text-decoration: none;
-	background-color: #543d56;
-	border-radius: 8px;
-	border-style: none;
-	border: none;
-	padding: 5px 20px;
-	color: white;
-}
-
-.login-btn,
-.logout-btn {
-	text-decoration: none;
-	background-color: #543d56;
-	border-radius: 8px;
-	border-style: none;
-	border: none;
-	padding: 5px 20px;
-	color: white;
 }
 
 .create-quiz-container {
@@ -198,3 +301,47 @@ a {
 	color: white;
 	margin: 0.5rem 0rem;
 }
+
+.loading-container {
+	width: 100vw;
+	height: 100vh;
+	border: 1px solid black;
+	margin: auto;
+	background: lightcyan;
+	opacity: 0.5;
+	display: grid;
+	place-items: center;
+	overflow: hidden;
+}
+
+.loading-container span {
+	border: 5px solid;
+	border-radius: 29px;
+	width: 53px;
+	height: 53px;
+	border-top: red;
+	border-bottom: red;
+	animation: load 1s linear infinite;
+}
+
+@keyframes load {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+/* .profile-link {
+	width: 3rem;
+	height: 3rem;
+	border-radius: 1.5rem;
+	margin: 0px;
+	padding: 0px;
+}
+
+.profile-link img {
+	width: 3rem;
+	height: 3rem;
+	border-radius: 1.5rem;
+} */
